fix: z-index

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,7 @@ body {
 
 .second-section {
   margin-top: 100svh;
-  z-index: 10;
+  z-index: 100;
   background: transparent;
   position: relative;
   max-width: 100vw;
